--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>GameGuessr - Türkçe</title>
     
+    <title>GameGuessr - Steam Yorumlarından Oyun Tahmin Et</title>
+    <meta name="description" content="Steam kullanıcı yorumlarından oyunu tahmin edebilir misin? Türkiye'nin en eğlenceli video oyunu bilgi yarışması. Aksiyon, RPG, Strateji oyunlarını bil, liderlik tablosuna gir.">
+    <meta name="keywords" content="steam oyun tahmin, oyun bulmaca, steam yorumları, oyun yarışması, gameguessr, video oyunu testi, gamer testi">
+    <meta name="author" content="GameGuessr">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="GameGuessr - Oyun Bilgini Test Et">
+    <meta property="og:description" content="Steam yorumlarına bakarak oyunu tahmin etmeye çalış! Bakalım kaç puan yapabileceksin?">
+    <meta property="og:image" content="https://gameguessr.com.tr/logo.png">
+    <meta property="og:url" content="https://gameguessr.com.tr">
+    <meta property="og:type" content="website">
+
+    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="apple-touch-icon" href="/logo.png">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FKSF680D58"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-FKSF680D58');
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
