--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="relative z-10 flex w-full max-w-md flex-col items-center rounded-lg bg-[#2a475e] p-8 shadow-2xl">
             <h2 class="text-2xl font-bold text-white mb-4">Kimsin Sen?</h2>
             <div class="w-full">
-                <input id="usernameInput" class="form-input flex w-full min-w-0 flex-1 rounded-lg border-2 border-transparent bg-[#1b2838] p-4 text-[#c7d5e0] placeholder:text-[#91b5ca] focus:border-primary focus:outline-none focus:ring-0 text-center" placeholder="Kullanıcı Adı" value=""/>
+                <input id="usernameInput" maxlength="15" class="form-input flex w-full min-w-0 flex-1 rounded-lg border-2 border-transparent bg-[#1b2838] p-4 text-[#c7d5e0] placeholder:text-[#91b5ca] focus:border-primary focus:outline-none focus:ring-0 text-center" placeholder="Kullanıcı Adı" value=""/>
             </div>
             <div class="flex w-full gap-3 mt-4 justify-center">
                 <button onclick="showScreen('screen-home')" class="px-6 py-3 rounded-lg bg-gray-600 text-white font-bold hover:bg-gray-500">Geri</button>
@@ -483,4 +483,5 @@
         </div>
     </footer>
 </body>
+
 </html>
