--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     
-    <title>GameGuessr - Steam Yorumlarından Oyun Tahmin Et</title>
-    <meta name="description" content="Steam kullanıcı yorumlarından oyunu tahmin et!">
+    <!-- TEMEL SEO AYARLARI -->
+    <title>GameGuessr - Steam Yorumlarından Oyun Tahmin Etme Oyunu</title>
+    <meta name="description" content="GameGuessr ile Steam kullanıcılarının yaptığı komik, garip ve bilgilendirici yorumlardan hangi oyun olduğunu tahmin et! Binlerce oyun ve sonsuz eğlence seni bekliyor.">
+    <meta name="keywords" content="GameGuessr, Game Guessr, Steam oyun tahmin, oyun bulma oyunu, steam yorumları, oyun bilgi yarışması, gamer test">
     <meta name="robots" content="index, follow">
+    <meta name="author" content="GameGuessr">
+    <meta name="theme-color" content="#1b2838">
+    <link rel="canonical" href="https://gameguessr.com.tr/">
     
+    <!-- OPEN GRAPH (Sosyal Medya ve WhatsApp Görünümü için) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gameguessr.com.tr/">
+    <meta property="og:title" content="GameGuessr - Steam Yorumlarından Oyunu Bul!">
+    <meta property="og:description" content="Oyuncuların gerçek yorumlarından oyunu tahmin edebilir misin? Skorunu yap, sıralamaya gir!">
+    <meta property="og:image" content="https://gameguessr.com.tr/logo.png">
+    <meta property="og:image:alt" content="GameGuessr Logo">
+
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="GameGuessr - Oyun Tahmin Oyunu">
+    <meta name="twitter:description" content="Steam yorumlarından oyunu tahmin etme meydan okumasına katıl.">
+    <meta name="twitter:image" content="https://gameguessr.com.tr/logo.png">
+
     <link rel="icon" type="image/png" href="/logo.png">
+
+    <!-- GOOGLE İÇİN YAPISAL VERİ (Marka İsmini Tanıtmak İçin Kritik) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "GameGuessr",
+      "alternateName": ["Game Guessr", "SteamGuessr"],
+      "url": "https://gameguessr.com.tr/",
+      "description": "Steam kullanıcı yorumlarından oyun tahmin etme oyunu.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://gameguessr.com.tr/?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "GameGuessr",
+      "applicationCategory": "GameApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "TRY"
+      }
+    }
+    </script>
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
@@ -112,6 +162,7 @@
             <div class="flex flex-col items-center gap-2"> <svg class="w-20 h-20 text-primary drop-shadow-[0_0_15px_rgba(102,192,244,0.5)]" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M21 6H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-10 7H8v3H6v-3H3v-2h3V8h2v3h3v2zm4.5 2c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4-3c-.83 0-1.5-.67-1.5-1.5S19.17 9 20 9s1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/>
                 </svg>
+                <!-- H1 etiketi SEO için kritik, marka adını içeriyor -->
                 <h1 class="text-6xl font-black tracking-tight drop-shadow-lg logo-text">GameGuessr</h1>
             </div>
 
@@ -203,7 +254,7 @@
             <div id="hintImageArea" class="hidden w-full bg-[#171a21]/90 border border-[#2a475e] rounded-xl overflow-hidden p-4 flex gap-4 transition-all duration-300">
                 <!-- Sol: Görsel -->
                 <div class="w-1/3 min-w-[120px] max-w-[200px] aspect-video relative rounded overflow-hidden border border-white/10 bg-black">
-                     <img id="hintImage" src="" class="w-full h-full object-cover blur-hint opacity-80">
+                     <img id="hintImage" src="" class="w-full h-full object-cover blur-hint opacity-80" alt="Oyun ipucu görseli">
                 </div>
                 <!-- Sağ: Bilgiler -->
                 <div class="flex-1 flex flex-col justify-center gap-2 text-sm">
