--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://gameguessr.com.tr/">
     <meta property="og:title" content="GameGuessr - Steam Yorumlarından Oyunu Bul!">
     <meta property="og:description" content="Oyuncuların gerçek yorumlarından oyunu tahmin edebilir misin? Skorunu yap, sıralamaya gir!">
-    <meta property="og:image" content="https://gameguessr.com.tr/logo.png">
+    <meta property="og:image" content="https://gameguessr.com.tr/prewiew.jpg">
     <meta property="og:image:alt" content="GameGuessr Logo">
 
     <!-- TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="GameGuessr - Oyun Tahmin Oyunu">
     <meta name="twitter:description" content="Steam yorumlarından oyunu tahmin etme meydan okumasına katıl.">
-    <meta name="twitter:image" content="https://gameguessr.com.tr/logo.png">
+    <meta name="twitter:image" content="https://gameguessr.com.tr/prewiew.jpg">
 
     <link rel="icon" type="image/png" href="/logo.png">
 
