--- a/index.html
+++ b/index.html
@@ -237,10 +237,7 @@
                 <h2 class="font-bold hidden md:block logo-text">GameGuessr</h2>
             </div>
             
-            <!-- KATEGORİ ADI (ORTADA) -->
-            <div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 flex items-center justify-center">
-                 <span id="gameCategoryCenter" class="text-primary font-black text-lg sm:text-2xl uppercase tracking-widest drop-shadow-[0_0_10px_rgba(102,192,244,0.3)]">KATEGORİ</span>
-            </div>
+            <!-- Kategori buradan kaldırıldı ve aşağıya (Main içine) taşındı -->
 
             <div class="flex gap-4 sm:gap-9">
                 <span id="scoreDisplay" class="text-primary font-medium">Puan: 0</span>
@@ -250,6 +247,11 @@
 
         <main class="flex flex-col items-center gap-6 p-4 mt-4 w-full max-w-4xl mx-auto flex-1">
             
+            <!-- KATEGORİ ADI (YENİ KONUM: İÇERİK ALANININ EN ÜSTÜ) -->
+            <div class="w-full flex justify-center -mt-2">
+                 <span id="gameCategoryCenter" class="text-primary font-black text-lg sm:text-2xl uppercase tracking-widest drop-shadow-[0_0_10px_rgba(102,192,244,0.3)]">KATEGORİ</span>
+            </div>
+
             <!-- GÖRSEL İPUCU ALANI -->
             <div id="hintImageArea" class="hidden w-full bg-[#171a21]/90 border border-[#2a475e] rounded-xl overflow-hidden p-4 flex gap-4 transition-all duration-300">
                 <!-- Sol: Görsel -->
