--- a/index.html
+++ b/index.html
@@ -18,18 +18,35 @@
     <meta property="og:url" content="https://gameguessr.com.tr/">
     <meta property="og:title" content="GameGuessr - Steam Yorumlarından Oyunu Bul!">
     <meta property="og:description" content="Oyuncuların gerçek yorumlarından oyunu tahmin edebilir misin? Skorunu yap, sıralamaya gir!">
-    <meta property="og:image" content="https://gameguessr.com.tr/prewiew.jpg">
+    <!-- Düzeltme: prewiew.jpg -> prewiew.jpeg -->
+    <meta property="og:image" content="https://gameguessr.com.tr/prewiew.jpeg">
     <meta property="og:image:alt" content="GameGuessr Logo">
 
     <!-- TWITTER CARD -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="GameGuessr - Oyun Tahmin Oyunu">
     <meta name="twitter:description" content="Steam yorumlarından oyunu tahmin etme meydan okumasına katıl.">
-    <meta name="twitter:image" content="https://gameguessr.com.tr/prewiew.jpg">
+    <!-- Düzeltme: prewiew.jpg -> prewiew.jpeg -->
+    <meta name="twitter:image" content="https://gameguessr.com.tr/prewiew.jpeg">
 
     <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="apple-touch-icon" href="/logo.png">
 
     <!-- GOOGLE İÇİN YAPISAL VERİ (Marka İsmini Tanıtmak İçin Kritik) -->
+    <!-- LOGO İÇİN EKLENEN KISIM -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "GameGuessr",
+      "url": "https://gameguessr.com.tr",
+      "logo": "https://gameguessr.com.tr/logo.png",
+      "sameAs": [
+        "https://gameguessr.com.tr"
+      ]
+    }
+    </script>
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
