--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- Düzeltme: prewiew.jpg -> prewiew.jpeg -->
     <meta name="twitter:image" content="https://gameguessr.com.tr/prewiew.jpeg">
 
-    <link rel="icon" type="image/png" href="/logo.png">
-    <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="/favicon.png">
 
     <!-- GOOGLE İÇİN YAPISAL VERİ (Marka İsmini Tanıtmak İçin Kritik) -->
     <!-- LOGO İÇİN EKLENEN KISIM -->
